# myopia

./: .gitignore  KTP.hs  LICENSE  Myopia.hs  README.md  example.ktp  example.myop  ktp.cabal  myopia.cabal  stack.yaml
KTP/: AST.hs  Parser.hs  REPL.hs
Myopia/: AST.hs  Builtins.hs  Eval.hs  Parser.hs  Pretty.hs  REPL.hs  TypeCheck.hs
