name:                ktp
version:             0.1.0.0
synopsis:            Programming language based on µ-recursive functions
homepage:            https://github.com/miikka/ktp/
license:             MIT
author:              Miikka Koskinen
maintainer:          miikka.koskinen@iki.fi
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable ktp
  main-is:             KTP.hs
  build-depends:       base ==4.5.*,
                       containers >= 0.5.0.0,
                       haskeline,
                       mtl,
                       parsec >= 3.0.0,
                       transformers
