name:                myopia
version:             0.1.0.0
synopsis:            Programming language based on µ-recursive functions
homepage:            https://github.com/miikka/myopia/
license:             MIT
author:              Miikka Koskinen
maintainer:          miikka.koskinen@iki.fi
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable myopia
  main-is:             Myopia.hs
  build-depends:       base ==4.5.*,
                       cmdargs,
                       containers >= 0.5.0.0,
                       either,
                       haskeline,
                       lens,
                       mtl,
                       parsec >= 3.0.0,
                       transformers,
                       wl-pprint
